2003-10-24  Joe Shaw  <joe@ximian.com>

	* libsoup/soup-address.c (update_address_from_entry): Call
	soup_dns_entry_get_hostent() on the SoupAddress passed in, not the
	one in addr->priv->lookup.  Fixes a crash on synchronous DNS
	lookups.

	* libsoup/soup-server.c (soup_server_new): We need to ref the
	address we're binding to, because soup_socket_get_local_address()
	doesn't ref for us.

2003-10-23  Dan Winship  <danw@ximian.com>

	* libsoup/soup-socket.c (init): Initialize flags to default
	values.

2003-09-23  Dan Winship  <danw@ximian.com>

	* libsoup/soup-gnutls.c (SoupGNUTLSCred): Remove refcounting, but
	note whether or not the CA file has been loaded.
	(SoupGNUTLSChannel): add a "hostname" field.
	(verify_certificate): Remove the comment about not being able to
	verify the hostname because of soup problems. Now it's because of
	GNUTLS problems instead.
	(soup_ssl_wrap_iochannel): Renamed from soup_ssl_get_iochannel,
	and takes a hostname and a creds argument now.
	(soup_ssl_get_client_credentials,
	soup_ssl_get_server_credentials): Return client/server credentials
	structures.
	(soup_ssl_free_client_credentials,
	soup_ssl_free_server_credentials): and free them.

	* libsoup/soup-session.c (class_init, set_property, get_property):
	add ssl_ca_file property
	(get_host_for_message): when returning an SSL host for the first
	time, create a client credentials structure for the session.
	(run_queue): Pass the ssl creds to the new connection. Also fix an
	unrelated bug that caused infinite loops on "bad hostname".

	* libsoup/soup-server.c: Use GObject properties, including
	ssl_cert_file and ssl_key_file properties.
	(soup_server_new): Remove "protocol" argument; if the cert file
	and key file properties were set, create a server credential
	structure from them and pass that to soup_socket_server_new.

	* libsoup/soup-connection.c (SoupConnectionPrivate): Rename
	dest_uri to origin_uri to match RFC 2616 terminology. Add an
	"ssl_creds" field.